Fixed responsiveness of popup end screen, only spacing left

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,22 +124,6 @@ button {
   cursor: pointer;
 }
 
-.try-again-btn {
-  font-size: 2.1rem;
-  box-shadow: 0px 5px 15px 0px;
-  padding: 60px 80px;
-  margin: 0 10px;
-  border-radius: 10px;
-  border: 4px solid black;
-  cursor: pointer;
-  background-color: rgb(24, 209, 24);
-  font-size: 46px;
-}
-
-.try-again-btn:hover {
-  border-color: yellow;
-}
-
 #start-btn {
   background-color: rgb(24, 209, 24);
   margin: 0 auto;
@@ -149,6 +133,9 @@ button {
   margin: 0 20px;
 }
 
+#start-btn:visited {
+  color: black;
+}
 #start-btn:hover {
   border-color: white;
 }
@@ -223,7 +210,8 @@ btn:active {
 
 /* end page with result */
 
-#score-container {
+/*#score-container {
+  display: none;
   background-color: white;
   padding-top: 50px;
   height: 400px;
@@ -231,16 +219,53 @@ btn:active {
   border-radius: 5px;
   box-shadow: 0px 5px 15px 0px;
   font-size: 32px;
-  z-index: 1; /* Sit on top */
-  position: fixed;
-  top: 300px;
-  left: 400px;
+  z-index: 1; /* Sit on top 
   margin-left: 0 auto;
+}*/
+
+#score-container {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-#result-text {
-  position: relative;
-  margin: 0 auto;
+#score-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 3px solid black;
+  border-radius: 10px;
+  width: 60%; /* Could be more or less, depending on screen size */
+  height: 30%;
+  font-size: 32px;
+  box-shadow: 0px 5px 15px 0px;
+  display: block;
+}
+
+#result-text span {
+  color:rgb(156, 156, 243)
+}
+
+.try-again-btn {
+  padding: 20px 40px;
+  position: fixed;
+  top: 330px;
+  border-radius: 10px;
+  border: 4px solid black;
+  cursor: pointer;
+  background-color: rgb(34, 207, 28);
+  font-size: 38px; 
+}
+
+.try-again-btn:hover {
+  border-color: yellow;
 }
 
 /* footer */
